add (completed) boolean property to tasks and implement CompletedToDo controller to change tak's completed status by Id
