# src/routes/todoAppRouter.ts
@@ -3,6 +3,7 @@ import AddToDo from "../controllers/AddToDo";
 import GetToDos from "../controllers/GetToDos";
 import DeleteToDo from "../controllers/DeleteToDo";
 import EditToDo from "../controllers/EditToDo";
+import CompletedToDo from "../controllers/CompletedToDo";
 
 const todoAppRouter = express.Router();
 
@@ -10,5 +11,6 @@ todoAppRouter.post("/addToDo", AddToDo);
 todoAppRouter.get("/getToDos", GetToDos);
 todoAppRouter.delete("/deleteToDo/:id", DeleteToDo);
 todoAppRouter.put("/editToDo/:id", EditToDo);
+todoAppRouter.patch("/completedToDo/:id", CompletedToDo);
 
 export default todoAppRouter;
